# sunrise-brightness

./: Cargo.toml
.githooks/: pre-commit
src/: brightness.rs  solar.rs  weather.rs
src/ui/: mod.rs
